
Change Log Update (00.00.97)
* 2017-05-20
+ Create ModSysConfig to use new FormManager. Still work in progress to use
  multi-page forms
+ Created DBStartup class that will handle creating and check all tables
  moved out of main to keep it cleaner.
+ Added AccessLevelDao, with each level having it's own limits for users
  Still need to implement user login pulling limits from the access level assigned
+ LastCallers will use SessionStats for pulling last x successful logins
+ Cleanup DAO, removed unused includes.
+ Cleaned Up Grouping Model, don't mix file and message conferences.
+ Synced All Updates with Linux Platform.

Change Log Update (00.00.96)
* 2017-05-12
+ Completed Refactoring of All Dao object to now use the BaseDao for concurrency.
+ Created Dao Integration Tests for Initial DAO Refactors with mock databases 
  and clean up.
+ Synced all Linux Project Files
- Eventually complete all Integration Tests.

Change Log Update (00.00.95)
* 2017-05-07
+ Create new BaseDao Object for Standard SQL Database base calls.
+ Updated ConferenceDao to inherit BaseDao
+ Updated OnelinerDao to inherit BaseDao
+ Created Integration UnitTests for Calling ConferenceDao testing all BaseDao 
  Methods to make sure everything is solid.
+ Added new getAllRecordsCount() to baseDao
- Working on refactoring the remaining DAO objects to inherit from BaseDao

Change Log Update (00.00.94)
* 2017-05-05
+ Removed AccessLevel yaml file, this will be redone in Database with DAO
+ Added new Protocol yaml file for File Transfer Protocol Configuration

Change Log Update (00.00.93)
* 2017-05-05
+ Completed Network DAO (FidoNet and IP Network Address Mappings)
+ Completed Oneliners DAO
- Next:
- Look at last callers, pull from sessions stats, or make standalone table.
- Convert AccessLevel yaml to database table.

Change Log Update (00.00.92)
* 2017-05-04
+ Completed Grouping DAO (Groups Conferences and Message/File Areas)
+ Completed Message Area DAO 