@@ -1,4 +1,9 @@
 
+Change Log Update (00.00.98)
+* 2017-05-27
++ Bugfix Database Global Variable, new DBStartUp Class needs to set this
+  and not use local variable.
+
 Change Log Update (00.00.97)
 * 2017-05-20
 + Create ModSysConfig to use new FormManager. Still work in progress to use
